--- a/assets/es.scss
+++ b/assets/es.scss
@@ -443,7 +443,7 @@
 
     @media screen and (max-width: 768px) {
       .image-with-text__content {
-        padding: 20px 0 0;
+        padding: 20px;
       }
     }
 
