--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,6 +5,22 @@
   font-weight: 400;
 }
 
+@font-face {
+  font-family: "SF Pro Display";
+  src:  url("../fonts/SFPRODISPLAYMEDIUM.woff") format('woff'),
+        url("../fonts/SFPRODISPLAYMEDIUM.woff2") format("woff2");
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: "Ivy Journal";
+  src:  url("../fonts/IvyJournal-Regular.eot") format('eot'),
+        url("../fonts/IvyJournal-Regular.ttf") format('ttf'),
+        url("../fonts/IvyJournal-Regular.woff") format('woff'),
+        url("../fonts/IvyJournal-Regular.woff2") format('woff2');
+  font-weight: 400;
+}
+
 *,
 *::after,
 *::before {
@@ -36,14 +52,26 @@
 }
 
 .h1 {
-  font-family: "Ivy Journal";
+  font-family: "Ivy Journal", sans-serif;
   font-size: 46px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
 
   @media screen and (max-width: 990px) {
-    font-size: 38px;
+    font-size: 32px;
+  }
+}
+
+.h2 {
+  font-family: "Ivy Journal", sans-serif;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+
+  @media screen and (max-width: 990px) {
+    font-size: 24px;
   }
 }
 
@@ -85,8 +113,25 @@ header {
               border-radius: 50px;
               padding: 12px 25px;
               font-family: "SF Pro Display";
+
+              @media screen and (max-width: 990px) {
+                margin-left: 0;
+              }
             }
           }
+        }
+      }
+
+      @media screen and (max-width: 990px) {
+        position: relative;
+
+        .navbar-toggler {
+          position: absolute;
+          top: 0;
+        }
+
+        .navbar-brand {
+          margin-left: auto;
         }
       }
     }
@@ -147,6 +192,28 @@ main {
           flex-direction: column;
           justify-content: center;
           align-items: flex-start;
+          position: relative;
+
+          .scroll-btn--wrapper {
+            position: absolute;
+            bottom: 0;
+            border-top: 1px solid #FFF;
+            padding: 16px 0;
+            text-align: center;
+            width: calc(100% - 1.5rem);
+
+            .scroll-btn {
+              font-family: "SF Pro Display", sans-serif;
+              font-size: 14px;
+              font-weight: 500;
+              line-height: 16px;
+              letter-spacing: 0.1em;
+              text-align: center;
+              color: #fff;
+              text-decoration: unset;
+              text-transform: uppercase;
+            }
+          }
           
           @media screen and (max-width: 990px) {
             justify-content: center;
@@ -158,7 +225,7 @@ main {
           }
 
           .h1 {
-            max-width: 550px;
+            max-width: 680px;
 
             @media screen and (max-width: 990px) {
               margin-left: auto;
@@ -166,6 +233,31 @@ main {
             }
           }
         }
+      }
+    }
+  }
+
+  .rich-text {
+    padding: 80px 0;
+
+    @media screen and (max-width: 990px) {
+      padding: 56px 0;
+    }
+
+    .container {
+      .h2 {
+        max-width: 990px;
+        margin: 0 auto 24px;
+      }
+
+      .link {
+        font-family: "SF Pro Display", sans-serif;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 19.09px;
+        letter-spacing: 0.1em;
+        text-align: center;
+        color: #000;
       }
     }
   }
