--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -291,12 +291,6 @@ main {
   }
 
   .logo-list {
-    padding-bottom: 80px;
-
-    @media screen and (max-width: 990px) {
-      padding-bottom: 56px;
-    }
-
     .container {
       .caption {
         color: #9E9E9E;
@@ -329,4 +323,100 @@ main {
       }
     }
   }
+
+  .es-image-gallery {
+    padding-top: 80px;
+    padding-bottom: 80px;
+
+    @media screen and (max-width: 990px) {
+      padding-top: 56px;
+      padding-bottom: 56px;
+    }
+  
+    .container {
+      .image-gallery--list {
+        gap: 2px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+  
+        .image-gallery--item {
+          .image {
+            position: relative;
+            height: 100%;
+  
+            img {
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+            }
+          }
+  
+          &.image-gallery--item-portrait {
+            width: 30%;
+  
+            @media screen and (max-width: 768px) {
+              width: 100%;
+            }
+  
+            .image {
+              padding-top: 135%;
+            }
+          }
+  
+          &.image-gallery--item-landscape {
+            width: calc(70% - 2px);
+  
+            @media screen and (max-width: 768px) {
+              width: 100%;
+            }
+  
+            .image {
+              padding-top: 65%;
+            }
+          }
+  
+          &.image-gallery--item-hide {
+            display: none;
+          }
+        }
+      }
+  
+      .image-gallery--button-wrapper {
+        padding-top: 60px;
+        text-align: center;
+  
+        button {
+          font-size: 16px;
+          font-weight: 400;
+          color: #2D2D2D;
+          font-style: normal;
+          line-height: normal;
+          font-family: "SF Pro Display";
+          padding: 12px 24px;
+          border: 1px solid #2D2D2D;
+          border-radius: 30px;
+          background: #fff;
+          transition: .3s ease;
+          
+          &:hover {
+            background-color: #2D2D2D;
+            color: #fff;
+          }
+
+          @media screen and (max-width: 768px) {
+            min-height: 40px;
+          }
+        }
+  
+        @media screen and (max-width: 768px) {
+          padding-top: 30px;
+        }
+      }
+    }
+  }
 }
+
