--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -29,6 +29,11 @@
   box-sizing: border-box;
 }
 
+html {
+  scrollbar-width: thin;
+  scroll-behavior: smooth;
+}
+
 .hide {
   display: none;
 }
@@ -420,3 +425,34 @@ main {
   }
 }
 
+footer {
+  padding: 40px 0;
+  background-color: #F9F8F4;
+
+  .container {
+    .footer--description {
+      font-family: "Ivy Journal", sans-serif;
+      font-size: 16px;
+      line-height: 20px;
+      text-align: left;
+      font-weight: 400;
+      max-width: 230px;
+      margin: 16px 0px 12px;
+    }
+
+    .footer--location {
+      gap: 8px;
+      display: flex;
+      align-items: center;
+
+      span {
+        font-family: "SF Pro Display", sans-serif;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 19px;
+        text-align: left;
+        text-decoration-line: underline;
+      }
+    }
+  }
+}
