--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -429,21 +429,32 @@ footer {
   padding: 40px 0;
   background-color: #F9F8F4;
 
+  @media screen and (max-width: 768px) {
+    text-align: center;
+  }
+
   .container {
     .footer--description {
       font-family: "Ivy Journal", sans-serif;
       font-size: 16px;
       line-height: 20px;
-      text-align: left;
       font-weight: 400;
       max-width: 230px;
       margin: 16px 0px 12px;
+
+      @media screen and (max-width: 768px) {
+        margin: 16px auto 12px;
+      }
     }
 
     .footer--location {
       gap: 8px;
       display: flex;
       align-items: center;
+
+      @media screen and (max-width: 768px) {
+        justify-content: center;
+      }
 
       span {
         font-family: "SF Pro Display", sans-serif;
@@ -452,6 +463,52 @@ footer {
         line-height: 19px;
         text-align: left;
         text-decoration-line: underline;
+      }
+    }
+
+    .navbar-nav {
+      gap: 60px;
+      flex-direction: row;
+      justify-content: center;
+
+      @media screen and (max-width: 768px) {
+        gap: 12px;
+        padding: 24px 0;
+      }
+
+      .nav-item {
+        .nav-link {
+          font-family: "SF Pro Display", sans-serif;
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 19.09px;
+        }
+      }
+    }
+
+    .footer-award {
+      max-width: 131px;
+      margin-left: auto;
+
+      @media screen and (max-width: 768px) {
+        margin: auto;
+      }
+
+      .footer-award--image {
+        margin-bottom: 8px;
+
+        img {
+          width: 131px;
+        }
+      }
+
+      .footer-award--text {
+        font-family: "Inter", serif;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 14.52px;
+        max-width: 115px;
+        margin: auto;
       }
     }
   }
