--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -508,6 +508,7 @@ footer {
         font-weight: 400;
         line-height: 14.52px;
         max-width: 115px;
+        text-align: center;
         margin: auto;
       }
     }
