--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -452,11 +452,29 @@ main {
 
       .h2 {
         margin-bottom: 40px;
+
+        @media screen and (max-width: 768px) {
+          margin-bottom: 20px;
+        }
       }
 
-      iframe {
+      .video-wrapper {
         border-radius: 16px;
+        overflow: hidden;
+        max-width: 100%;
+        position: relative;
+        padding-top: 56.2%;
+
+        iframe {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
       }
+      
     }
   }
 }
