--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -111,6 +111,10 @@ html {
   .small-order-0 {
     order: -1;
   }
+
+  .small--text-center {
+    text-align: center;
+  }
 }
 
 .caption {
@@ -712,6 +716,178 @@ main {
 
         &:hover {
           opacity: 0.8;
+        }
+      }
+    }
+  }
+
+  .media-slider {
+    .container-fluid {
+      padding: 0;
+
+      .image {
+        position: relative;
+        padding-top: 130%;
+        
+        img {
+          width: 100%;
+          max-width: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+
+      @mixin swiperNavigation() {
+        --swiper-navigation-sides-offset: 150px;
+        --swiper-navigation-size: 20px; 
+        --swiper-navigation-color: #000;
+
+        @media (max-width: 768px) {
+          --swiper-navigation-sides-offset: 20px;
+        }
+      }
+
+      .swiper-button-next,
+      .swiper-button-prev {
+        width: 44px;
+        height: 44px;
+        border-radius: 50%;
+        background-color: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 0 0 5px 0 rgba(0,0,0,.2);
+
+        @include swiperNavigation();
+      }
+    }
+  }
+
+  .form-section {
+    .container {
+      form {
+        padding: 60px 40px;
+        background-color: #F9F8F4;
+
+        .form-check-input:checked {
+          background-color: #000;
+          border-color: #000;
+        }
+
+        label {
+          font-family: 'Inter', serif;
+          font-size: 14px;
+          font-weight: 500;
+          line-height: 20px;
+        }
+
+        a {
+          color: inherit;
+          text-decoration: underline;
+        }
+
+        .form-check {
+          margin-bottom: 15px;
+
+          label {
+            margin: 0;
+          }
+        }
+
+        .form-control {
+          border-radius: 0;
+          box-shadow: unset !important;
+          font-family: 'Inter', serif;
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 24px;
+        }
+
+        #btn-country {
+          height: 34px;
+          display: flex;
+          padding: 6px 12px;
+          align-items: center;
+  
+          &::after {
+            content: unset;
+          }
+        }
+  
+        .docs-datepicker {
+          .input-group {
+            display: flex;
+            align-items: center;
+            flex-wrap: nowrap;
+  
+            button {
+              padding: 5px 0 6px 12px;
+              height: 34px;
+              border: 1px solid #D0D5DD;
+              border-radius: 0;
+              border-right: 0;
+              opacity: 1;
+              background-color: #FFF;
+            }
+  
+            input {
+              border: 1px solid #D0D5DD;
+              border-left: 0;
+              border-radius: 0;
+              box-shadow: unset !important;
+            }
+          }
+        }
+
+        .timepicker-wrapper {
+          .input-group {
+            position: relative;
+
+            img {
+              position: absolute;
+              top: 50%;
+              left: 12px;
+              z-index: 5;
+              transform: translateY(-50%);
+            }
+
+            input {
+              padding-left: 40px;
+            }
+          }
+        }
+      }
+
+      .info-wrapper {
+        padding-left: 25px;
+
+        .info-item {
+          .h3 {
+            margin-bottom: 16px;
+          }
+
+          .description {
+            ul {
+              margin-bottom: 16px;
+            }
+
+            a {
+              color: inherit;
+              font-weight: 500;
+              text-decoration: underline;
+            }
+          }
+
+          .map-wrapper {
+            margin-bottom: 16px;
+          }
+        }
+
+        .info-item + .info-item {
+          margin-top: 28px;
         }
       }
     }
