--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -232,6 +232,7 @@ header {
               border-radius: 50px;
               padding: 12px 25px;
               font-family: "SF Pro Display";
+              border: 1px solid;
 
               @media screen and (max-width: 990px) {
                 margin-left: 0;
